--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#3F290D",
+    "titleBar.activeBackground": "#583912",
+    "titleBar.activeForeground": "#FDFAF5"
+  }
 }
