Pablo's changes on index.hbs, app.js

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,8 @@
 {
-  "editor.tabSize": 2
+  "editor.tabSize": 2,
+  "workbench.colorCustomizations": {
+    "activityBar.background": "#45260A",
+    "titleBar.activeBackground": "#60350E",
+    "titleBar.activeForeground": "#FDF9F4"
+  }
 }
